<resources>
    <string name="app_name">CV Fresher</string>
    <string name="register">Register</string>
    <string name="log_in">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="manage_cv">Manage CV</string>
    <string name="submit">Submit</string>
</resources>