<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".RegActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/txtNewUsername"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:ems="15"
        android:textSize="25sp"
        android:text=""
        android:hint="@string/username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:autofillHints="" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:ems="15"
        android:textSize="25sp"
        android:text=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:autofillHints="" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:ems="15"
        android:textSize="25sp"
        android:text=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:autofillHints="" />


    <Button
        android:id="@+id/btnReg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:text="@string/register"/>

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/back_to_login"
        android:textSize="20sp" />

</LinearLayout>